# rnnoise

./: .gitattributes  CMakeLists.txt  README
RnNoise/: RNNoise.cpp  RNNoise.h  RnNoise.sln  RnNoise.vcxproj  RnNoise.vcxproj.filters  rnn_weight.h
RnNoiseClr/: AssemblyInfo.cpp  RnNoiseClr.cpp  RnNoiseClr.h  RnNoiseClr.vcxproj  RnNoiseClr.vcxproj.filters
RnNoiseClr.Demo/: Program.cs  RnNoiseClr.Demo.csproj
RnNoiseClr.Demo/Properties/: AssemblyInfo.cs
examples/: rnnoise_demo.c
src/: denoise.c  rnnoise.c  rnnoise_demo.c
